--- a/public_html/css/main.css
+++ b/public_html/css/main.css
@@ -6,6 +6,9 @@ html, body {
 }
 
 canvas { background-color: #eee;
+  display: none;
   width:  100%;
   height: 100%;
 }
+
+#form_peer_send {display:none;}
